finished skills section, finished project on html side, working on css

--- a/index.html
+++ b/index.html
@@ -59,9 +59,148 @@
             </figure>
         </div>
     </div>
-
-
 </section>
+
+<section id="languages">
+    <div class="container">
+      <div class="row">
+        <h1 class="section_title">This is my <span class="text-purple">technology stack</span></h1>
+        <div class="language_list">
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt="Html Logo" class="language_img" />
+            </figure>
+            <span class="language_name">HTML</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="CSS Logo"
+                class="language_img" />
+            </figure>
+            <span class="language_name">CSS</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="JavaScript Logo"
+                class="language_img" />
+            </figure>
+            <span class="language_name">JavaScript</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                alt="TypeScript Logo" class="language_img" />
+            </figure>
+            <span class="language_name">TypeScript</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" alt="Vue Logo"
+                class="language_img" />
+            </figure>
+            <span class="language_name">Vue</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" alt="Nuxt Logo"
+                class="language_img" />
+            </figure>
+            <span class="language_name">Nuxt</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="React Logo"
+                class="language_img" />
+            </figure>
+            <span class="language_name">React</span>
+          </div>
+          <div class="language">
+            <figure class="language_img-wrapper">
+              <img src="https://mobx.js.org/img/mobx.png" alt="MobX Logo" class="language_img" />
+            </figure>
+            <span class="language_name">MobX</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="project">
+      <div class="container">
+          <div class="row">
+              <h1 class="section_title">Here are some of my <span class="text-purple">projects</span></h1>
+              <ul class="project_list">
+                  <li class="project">
+                      <div class="project_wrapper">
+                          <img src="assets/loopit.png" alt="Car subscription project" class="project_img">
+                          <div class="project_description">
+                              <h3 class="project_description-title">Car sales project</h3>
+                              <h4 class="project_description-sub-title">Html, CSS, JavaScript, Vue, Vuex</h4>
+                              <p class="project_description-para">
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere atque, nihil cum illum rem et dolores quam numquam doloremque. Recusandae similique officia sapiente, consequatur perspiciatis minus autem? In suscipit aliquid delectus assumenda maxime officia repudiandae praesentium dolor, error explicabo adipisci?
+                              </p>
+                              <div class="project_description-links">
+                                  <a href="#">
+                                      <i class="fas fa-link"></i>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                  </li>
+                  <li class="project">
+                    <div class="project__wrapper">
+                      <img src="./assets/loopit.png" class="project__img" alt="Car subscription project">
+                      <div class="project__description">
+                        <h3 class="project__description--title">Car sales project</h3>
+                        <h4 class="project__description--sub-title">
+                          Html, CSS, JavaScript, Vue, Vuex
+                        </h4>
+                        <p class="project__description--para">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo, scelerisque sed odio eget,
+                          luctus faucibus augue. Fusce volutpat iaculis dapibus. Lorem ipsum dolor sit amet, consectetur
+                          adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
+                        </p>
+                        <div class="project__description--links">
+                          <a href="#" target="_blank" class="project__description--link">
+                            <i class="fab fa-github"></i>
+                          </a>
+                          <a href="https://www.yourwebsite.com" class="project__description--link">
+                            <i class="fas fa-link"></i>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="project">
+                    <div class="project__wrapper">
+                      <img src="./assets/loopit.png" class="project__img" alt="Car subscription project">
+                      <div class="project__description">
+                        <h3 class="project__description--title">Dashboard</h3>
+                        <h4 class="project__description--sub-title">
+                          Html, CSS, JavaScript, Vue, Vuex
+                        </h4>
+                        <p class="project__description--para">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo, scelerisque sed odio eget,
+                          luctus faucibus augue. Fusce volutpat iaculis dapibus. Lorem ipsum dolor sit amet, consectetur
+                          adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
+                        </p>
+                        <div class="project__description--links">
+                          <a href="#" target="_blank" class="project__description--link">
+                            <i class="fab fa-github"></i>
+                          </a>
+                          <a href="https://www.yourwebsite.com" class="project__description--link">
+                            <i class="fas fa-link"></i>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
 
 
 
