finished David Bragg e-portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pah Reh</title>
+    <title>David Bragg</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/ae1f52bbfa.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 
 <section id="about-me">
     <nav>
-        <div class="personal_logo">Pah Reh</div>
+        <div class="personal_logo">David Bragg</div>
         <ul class="nav_link-list">
             <li>
                 <a href="#" class="nav_link-anchor link_hover-effect link_hover-effect-black">Languages</a>
@@ -34,7 +34,7 @@
                     <img src="assets/me.jpeg" class="about-me_picture" alt="Picture of Me!">
                 </figure>
                 <h1>
-                    Hey! I'm <span class="text-purple">Pah Reh</span>&nbsp;<span class="wave">👋</span>
+                    Hey! I'm <span class="text-purple">David Bragg</span>&nbsp;<span class="wave">👋</span>
                 </h1>
                 <p class="about-me_info-para">
                     I'm a <strong class="text-purple">front end developer</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, animi possimus! Repellat dicta voluptatibus dolores illum, laudantium recusandae minus beatae ut neque est quas et earum architecto dolorum. Voluptatum, non.
@@ -125,9 +125,9 @@
         </div>
       </div>
     </div>
-  </section>
+</section>
 
-  <section id="project">
+<section id="project">
       <div class="container">
           <div class="row">
               <h1 class="section_title">Here are some of my <span class="text-purple">projects</span></h1>
@@ -150,23 +150,23 @@
                       </div>
                   </li>
                   <li class="project">
-                    <div class="project__wrapper">
-                      <img src="./assets/loopit.png" class="project__img" alt="Car subscription project">
-                      <div class="project__description">
-                        <h3 class="project__description--title">Car sales project</h3>
-                        <h4 class="project__description--sub-title">
+                    <div class="project_wrapper">
+                      <img src="./assets/loopit.png" class="project_img" alt="Car subscription project">
+                      <div class="project_description">
+                        <h3 class="project_description-title">Car sales project</h3>
+                        <h4 class="project_description-sub-title">
                           Html, CSS, JavaScript, Vue, Vuex
                         </h4>
-                        <p class="project__description--para">
+                        <p class="project_description-para">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo, scelerisque sed odio eget,
                           luctus faucibus augue. Fusce volutpat iaculis dapibus. Lorem ipsum dolor sit amet, consectetur
                           adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
                         </p>
-                        <div class="project__description--links">
-                          <a href="#" target="_blank" class="project__description--link">
+                        <div class="project_description-links">
+                          <a href="#" target="_blank" class="project_description-link">
                             <i class="fab fa-github"></i>
                           </a>
-                          <a href="https://www.yourwebsite.com" class="project__description--link">
+                          <a href="https://www.yourwebsite.com" class="project_description-link">
                             <i class="fas fa-link"></i>
                           </a>
                         </div>
@@ -174,23 +174,23 @@
                     </div>
                   </li>
                   <li class="project">
-                    <div class="project__wrapper">
-                      <img src="./assets/loopit.png" class="project__img" alt="Car subscription project">
-                      <div class="project__description">
-                        <h3 class="project__description--title">Dashboard</h3>
-                        <h4 class="project__description--sub-title">
+                    <div class="project_wrapper">
+                      <img src="./assets/loopit.png" class="project_img" alt="Car subscription project">
+                      <div class="project_description">
+                        <h3 class="project_description-title">Dashboard</h3>
+                        <h4 class="project_description--ub-title">
                           Html, CSS, JavaScript, Vue, Vuex
                         </h4>
-                        <p class="project__description--para">
+                        <p class="project_description-para">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo, scelerisque sed odio eget,
                           luctus faucibus augue. Fusce volutpat iaculis dapibus. Lorem ipsum dolor sit amet, consectetur
                           adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
                         </p>
-                        <div class="project__description--links">
-                          <a href="#" target="_blank" class="project__description--link">
+                        <div class="project_description-links">
+                          <a href="#" target="_blank" class="project_description-link">
                             <i class="fab fa-github"></i>
                           </a>
-                          <a href="https://www.yourwebsite.com" class="project__description--link">
+                          <a href="https://www.yourwebsite.com" class="project_description-link">
                             <i class="fas fa-link"></i>
                           </a>
                         </div>
@@ -200,8 +200,44 @@
                 </ul>
               </div>
             </div>
-          </section>
+</section>
 
+<footer>
+    <div class="row footer_row">
+        <a href="#" class="footer_anchor">
+            <figure class="footer_logo">
+                <img src="assets/logo.svg" class="footer_logo-img" alt="">
+            </figure>
+            <span class="footer_logo-popper">
+                Top
+                <i class="fas fa-arrow-up"></i>
+            </span>
+        </a>
+        <div class="footer_social-list">
+            <a href="https://google.com" target="_blank" class="
+              footer_social-link
+              link_hover-effect
+              link_hover-effect-white
+            " target="_blank">GitHub</a>
+            <a href="https://google.com" target="_blank" class="
+              footer_social-link
+              link_hover-effect
+              link_hover-effect-white
+            " target="_blank">LinkedIn</a>
+            <a href="mailto:email@email.com" target="_blank" class="
+              footer_social-link
+              link_hover-effect
+              link_hover-effect-white
+            " target="_blank">Email</a>
+            <a href="./assets/Example Resume.pdf" target="_blank" class="
+              footer_social-link
+              link_hover-effect
+              link_hover-effect-white
+            " target="_blank">Resume</a>
+          </div>
+          <div class="footer_copyright">Copyright © 2021 David Bragg</div>
+        </div>
+      </footer>
 
 
     
